<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiente2"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <LinearLayout
        android:id="@+id/cityContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/tv_ciudadDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/ciudad_actual"
            android:textColor="#d4af37"
            android:textSize="22sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/tempContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cityContainer"
        >

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/estado"
            android:textColor="#C9FFFBFB"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#C9FFFBFB"
            android:fontFamily="sans-serif-thin"
            android:text="@string/_9_c"
            android:textSize="85sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#C9FFFBFB"
                android:textSize="15sp"
                android:text="@string/_9_c"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#C9FFFBFB"
                android:textSize="15sp"
                android:text="@string/_9_c"/>
        </LinearLayout>
        <TextView
            android:id="@+id/temp_feels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#C9FFFBFB"
            android:textSize="15sp"
            android:text="@string/s_t"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detallesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/ic_presion"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/pressure"
                    app:tint="#C9FFFBFB"
                    android:contentDescription="@string/icono" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/presion"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hpa"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/humidity"
                    app:tint="#C9FFFBFB"
                    android:contentDescription="@string/icono" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humedad"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/wind"
                    app:tint="#C9FFFBFB"
                    android:contentDescription="@string/icono" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viento"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/windspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_s"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/sunrise"
                    app:tint="#C9FFFBFB"
                    android:contentDescription="@string/icono" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amanecer"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textSize="12sp"
                        tools:ignore="TextContrastCheck" />
                    <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/timezone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/utc"
                        android:textSize="12sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/sunset"
                    app:tint="#C9FFFBFB"
                    android:contentDescription="@string/icono" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crep_sculo"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_pm"
                        android:textSize="12sp"
                        tools:ignore="TextContrastCheck" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/timezone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/utc"
                        android:textSize="12sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>