<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/background_gradiente"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/welcomeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/txtv_welcome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#C9FFFBFB"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5sp">

            <TextView
                android:id="@+id/txtv_searchTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="Buscá una cuidad"
                android:textColor="#C9FFFBFB"
                android:textSize="15sp"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/ciudadContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/eT_ciudadActual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#E2E2E6"
                    android:hint="Ej.: New York, US"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColorHint="#535252"
                    android:textSize="19sp" />

                <ImageView
                    android:id="@+id/ic_search"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_search_24"
                    app:tint="#C9020202"
                    android:padding="5dp"
                    android:background="#D2FF5722"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="13sp"
            android:orientation="vertical">



            <Button
                android:id="@+id/btn_weather_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#030A23"
                android:text="@string/weather_now"
                android:textSize="16sp"
                android:textColor="#DDFFFBFB"
                android:layout_marginTop="120dp"
                android:padding="13sp"/>

            <Button
                android:id="@+id/btn_cities_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#030A23"
                android:onClick="launchList"
                android:text="@string/cities_list"
                android:textColor="#DDFFFBFB"
                android:textSize="16sp"
                android:padding="16sp"/>

        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/loaderM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>